# airbots_ros1_gazebo

./: .gitignore  CMakeLists.txt  README.md  gazebo_config.sh
demos/: homework2.py
launch/: demo.launch  ros_controllers.launch
src/airbot_play_gazebo/: CMakeLists.txt  README.md  download_models.sh  gazebo_config.sh  gazebo_grasp_config.sh  package.xml
src/airbot_play_gazebo/airbot_play_gazebo_worlds/: desk_sky_2cubes_static.world  desk_sky_box_1cube.world  desk_sky_box_3cubes.world  desk_sky_box_3cubes_static.world  navigation_pick_place.world  test_2.world  test_3.world
src/airbot_play_gazebo/config/: gazebo_controllers.yaml  joint_state_controller.yaml  moveit_controllers.yaml  rm2_controller.yaml  ros_controllers.yaml
src/airbot_play_gazebo/demos/: example.ipynb  keyboard_control.py
src/airbot_play_gazebo/launch/: add_model.launch  add_models.launch  demo.launch  empty_world.launch  rm2_controller.launch  ros_controllers.launch
src/airbot_play_gazebo/scripts/: auto_show_images.py  remap_joint_cmd.py
src/moveit1_configs_gazebo/airbot_play_v3_gripper_gazebo_all_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit1_configs_gazebo/airbot_play_v3_gripper_gazebo_all_config/config/: airbot_play_v3_gripper_gazebo.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/moveit1_configs_gazebo/airbot_play_v3_gripper_gazebo_all_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/moveit1_configs_gazebo/airbot_play_v3_inspire_eg2_4c_rm2_v2_gazebo_all_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit1_configs_gazebo/airbot_play_v3_inspire_eg2_4c_rm2_v2_gazebo_all_config/config/: airbot_play_v3_inspire_eg2_4c_rm2_v2.srdf
src/moveit1_configs_gazebo/airbot_play_v3_inspire_eg2_4c_rm2_v2_gazebo_all_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  (+10 more)
(+1 files in other folders)
