<package>
  <name>airbot_play_gazebo</name>
  <version>1.0.0</version>
  <description>
    <p>Gazebo package for airbot_play</p>
    <p>This package contains gazebo worlds, 3D models and config files for airbot_play robot</p>
  </description>
  <author>GHz</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->

</package>